fix: mobile layout issues

--- a/scss/_design.scss
+++ b/scss/_design.scss
@@ -342,6 +342,10 @@ a {
             &:hover {
                 opacity: 0.7;
             }
+
+            &:active {
+                transform: translate(-50%, -50%) scale(0.96);
+            }
         }
 
         &-pause-icon {
@@ -781,6 +785,10 @@ a {
         &:hover {
             opacity: 0.7;
         }
+
+        &:active {
+            transform: scale(0.92);
+        }
     }
 
     .beat-fixed__prev,
@@ -824,6 +832,11 @@ a {
             display: flex;
             align-items: center;
             cursor: pointer;
+            transition: all 0.1s linear;
+
+            &:active {
+                transform: scale(0.94);
+            }
         }
 
         .beat-fixed__volume-low,
